--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Author: Mans Magnusson
 Maintainer: Mans Magnusson <mons.magnusson@gmail.com>
 Description: Package to enable quick analysis of posterior approximation algorithms.
 License: GPL
+Encoding: UTF-8
 Imports:
   validatejsonr,
   jsonlite,
