--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(bayesbench_bash_run)
 export(bayesbench_cfg)
 export(bayesbench_output)
 export(bayesbench_run)
+export(output_directory)
 export(read_bayesbench_cfg_from_file)
 export(write_bayesbench_cfg_to_file)
