Added config stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,8 @@ export(bayesbench_cfg)
 export(bayesbench_output)
 export(bayesbench_run)
 export(output_directory)
+export(output_name)
+export(output_type)
 export(read_bayesbench_cfg_from_file)
+export(verbose)
 export(write_bayesbench_cfg_to_file)
