--- a/inst/extdata/examples/test_8schools_advi.yml
+++ b/inst/extdata/examples/test_8schools_advi.yml
@@ -1,20 +1,24 @@
 
-- diagnostics:
+- config_name: test_8schools_advi1
+  diagnostics:
   - psis_khat
   inference_engine: bayesbench_stan_advi
-  method_specific_arguments:
+  inference_engine_arguments:
     iter: 1000
     tol_rel_obj: [0.01, 0.0001]
-  output_directory: out
+  output: 
+    directory: test_output
   posterior_database_path: ../posterior_database
   posterior_name: "8_schools|noncentered"
 
 - diagnostics:
   - psis_khat
   inference_engine: bayesbench_stan_advi
-  method_specific_arguments:
+  inference_engine_arguments:
     iter: [1000, 10000]
     tol_rel_obj: 0.01
-  output_directory: out
+  output: 
+    directory: test_output
+    type: rda
   posterior_database_path: ../posterior_database
   posterior_name: ["8_schools|centered", "8_schools|noncentered"]
