--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(bayesbench_bash_run)
 export(bayesbench_cfg)
 export(bayesbench_output)
 export(bayesbench_run)
+export(config_name)
+export(inference_engine_function)
 export(output_directory)
 export(output_name)
 export(output_type)
