--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(bayesbench_run)
 export(config_name)
 export(inference_engine_function)
 export(output_directory)
+export(output_file_path)
 export(output_name)
 export(output_type)
 export(read_bayesbench_cfg_from_file)
