--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,3 +21,4 @@ export(read_bayesbench_cfg_from_file)
 export(read_bayesbench_outputs)
 export(verbose)
 export(write_bayesbench_cfg_to_file)
+export(write_bayesbench_outputs)
