--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ S3method(bayesbench_cfg_as_data.frame,bayesbench_job_cfg)
 S3method(bayesbench_cfg_as_data.frame,bayesbench_output)
 S3method(print,bayesbench_cfg)
 S3method(print,bayesbench_output)
+export("output_directory<-")
+export("output_type<-")
 export(bayesbench_bash_run)
 export(bayesbench_cfg)
 export(bayesbench_cfg_as_data.frame)
